src/test/fail/function_arg_redecl.ly
###
SyntaxError: a has already been declared.
Where: File "test/fail/function_arg_redecl.ly" at line 6
###

define f(a: integer, a: integer) {}
